--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,4 +1,6 @@
 #contact-form{
+    
+    margin: auto ;
 }
 
 #contact-card{
@@ -24,16 +26,32 @@
 }
 
 #form-submit{
-    border: 2px solid rgb(14, 110, 219);
-    width: 82%;
+    border: 2px solid rgb(0, 145, 48);
+    width: 300px;
     margin: 30px 0px 10px 0px;
     padding: 10px;
     border-radius: 4px;
-    color: white;
+    color: rgb(0, 145, 48);
     font-size: 20px;
     background-color: rgb(0, 183, 255);
 }
 
 #contact-info{
     margin: 60px 0 60px 0;
+}
+
+@media(min-width: 767px){
+    #contact-form{
+        width: 768px;
+    }
+
+    .form-title{
+        padding: 10px 0 10px 75px;
+    }
+}
+
+@media(min-width: 1023px){
+    .form-title{
+        padding: 10px 0 10px 80px;
+    }
 }
