--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -1,77 +1,76 @@
 .underline {
-    color: inherit;
-    text-decoration: inherit;
+  color: inherit;
+  text-decoration: inherit;
+}
+.a, div._nav {
+    color: white;
+    width: 100vw;
+    height: 65px;
+    right: 85px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 0;
   }
-  .a, div._nav {
-      color: white;
-      width: 100vw;
-      height: 65px;
-      right: 65px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      z-index: 0;
-    }
-    div._nav, a, li.links {
-      text-decoration: none !important;
-    }
+  div._nav, a, li.links {
+    text-decoration: none !important;
+  }
+
+  #nav-title {
+    font-weight: 600;
+    font-size: 20px;
+    text-decoration: none !important;
+  }
+  .menu-bar {
+    display: none;
+  }
+
+  div.navlogo {
+    font-size: small;
+    margin-left: 20px;
+    height: 50px;
+    width: 232px;
+    border: 2px solid black;
+    background-color: blue;
+  }
+
+  div.links-container li.links {
+    /* -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: black; */
+    font-size: 14px;
+    padding-top: 20px;
+  }
+
+  .links-container {
+    display: flex;
+    text-decoration: none !important;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 250px;
+    margin: auto 0;
+    align-items: flex-start;
+  }
   
-    #nav-title {
-      font-weight: 600;
-      font-size: 20px;
-      text-decoration: none !important;
-    }
+  .links-container li {
+    text-decoration: none !important;
+    margin: 0 25px;
+    z-index: 50;
+  }
+  @media (min-width: 1024px) {
     .menu-bar {
-      display: none;
+      display: flex;
+      list-style: none;
+      z-index: 100;
+      width: 100%;
     }
-  
-    .navlogo {
-      font-size: small;
-      margin: 0 auto;
-      height: 50px;
-      width: 232px;
-      border: 2px solid black;
-      background-color: blue;
-      /* padding: 45px 0 0 40px; */
-    }
-  
-    div.links-container li.links {
-      /* -webkit-text-stroke-width: 0.5px;
-      -webkit-text-stroke-color: black; */
-      font-size: 14px;
-      padding-top: 20px;
-    }
-  
+
     .links-container {
       display: flex;
-      text-decoration: none !important;
-      flex-direction: column;
+      flex-direction: row;
+      align-items: center;
       justify-content: space-around;
-      height: 250px;
-      margin: auto 0;
-      align-items: flex-start;
-    }
-    
-    .links-container li {
+      width: 100%;
       text-decoration: none !important;
-      margin: 0 25px;
-      z-index: 50;
+      padding: 0 40px;
     }
-    @media (min-width: 1024px) {
-      .menu-bar {
-        display: flex;
-        list-style: none;
-        z-index: 100;
-        width: 100%;
-      }
-  
-      .links-container {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-around;
-        width: 100%;
-        text-decoration: none !important;
-        padding: 0 150px 0 150px
-      }
-  }
+}
