--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -16,3 +16,14 @@ h1{
 .about-card{
     border: 2px solid black;
 }
+
+.buttons{
+    border: 2px solid rgb(0, 145, 48);
+    width: 300px;
+    /* margin: 30px 0px 10px 0px; */
+    padding: 10px;
+    border-radius: 4px;
+    color: rgb(0, 145, 48);
+    font-size: 20px;
+    background-color: rgb(0, 183, 255);
+}
