--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,5 +1,4 @@
 #contact-form{
-    
     margin: 40px auto;
 }
 
@@ -28,13 +27,14 @@
 }
 
 #form-submit{
-    border: 2px solid rgb(0, 145, 48);
+    border: 2px solid rgb(2, 94, 32);
     width: 300px;
     margin: 30px 0px 10px 0px;
     padding: 10px;
     border-radius: 4px;
-    color: rgb(0, 145, 48);
+    color: rgb(2, 94, 32);
     font-size: 20px;
+    font-weight: 600;
     background-color: rgb(0, 183, 255);
 }
 
