--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -45,7 +45,7 @@
     display: flex;
     text-decoration: none !important;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     height: 250px;
     margin: auto 0;
     align-items: flex-start;
@@ -68,7 +68,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      justify-content: space-around;
+      justify-content: center;
       width: 100%;
       text-decoration: none !important;
       padding: 0 40px;
