attempt to fix bug with carousel controls that are getting display flex on deployed site

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -77,7 +77,11 @@ div.mid-cont-card:hover{
   div.slider{
     display: block;
     margin: 40px auto;
-    max-width: 1280px;
+    width: 1280px;
+  }
+
+  .carousel-control-next, .carousel-control-prev, .carousel-indicators{
+    display: center !important;
   }
 
   div#main-banner{
