attempt to fix bug with carousel controls that are getting display flex on deployed site

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -80,8 +80,12 @@ div.mid-cont-card:hover{
     width: 1280px;
   }
 
-  .carousel-control-next, .carousel-control-prev, .carousel-indicators{
+  .carousel-control-next, .carousel-control-prev{
     display: center !important;
+  }
+
+  .carousel-indicators{
+    bottom: -700px;
   }
 
   div#main-banner{
