--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,11 +4,17 @@
 } 
 
 div#stock-ticker-container{
-  background-color: rgb(24, 22, 22) !important;
+  /* background-color: rgb(24, 22, 22) !important; */
+  /* border: 2px solid rgba(63, 62, 62, 0.651);
+  border-radius: 8px; */
+  max-width: 1280px;
+  padding: 10px;
+  margin: 0 auto;
 
 }
 
 h1.headline{
     font-family: 'SubwayTicker';
     color: green !important;
+    font-size: 45px;
 }
