--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,9 +1,21 @@
 #main-banner{
-    display: none;
-  }
+  display: none;
+}
 
 p{
   font-size: 15px;
+}
+
+h4{
+  transition: transform .2s;
+}
+
+h4:hover{
+  transform: scale(1.3);
+}
+
+h4#tools-link{
+  padding-top: 20px !important;
 }
 
 #upper-container{
@@ -11,10 +23,6 @@ p{
   padding: 20px 20px;
   margin: 80px 20px;
 }
-
-/* div.slider{
-  display: none;
-} */
 
 #mid-container{
   display: flex;
@@ -84,10 +92,10 @@ img.vendors-image{
   
   p.path-text{
     width: 275px;
-    height: 250px;
-    /* padding: 15px; */
+    /* height: 250px; */
+    padding-top: 15px;
     /* margin: 10px; */
-    text-align: center;
+    text-align: left;
   }
 
   .carousel-image{
