--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,10 +1,10 @@
-h1{
+h1, h6{
     color: white !important;
 }
 
 #about-container{
     margin: 0 auto;
-    width: 1200px;
+    
     text-align: center;
 }
 
@@ -28,7 +28,7 @@ h1{
 }
 
 img.img{
-    width: 550px !important;
+    width: 375px !important;
     border-radius: 10px;
 }
 
@@ -43,4 +43,14 @@ img.img{
     font-weight: 600;
     background-color: rgb(0, 183, 255);
     /* -webkit-text-stroke:0.5px black; */
+}
+
+@media(min-width: 1339px){
+    div#lower-container{
+        flex-direction: row;
+    }
+
+    .about-card{
+        width: 700px;
+    }
 }
