--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -14,6 +14,10 @@ h4:hover{
   transform: scale(1.3);
 }
 
+div.slider{
+  position: relative;
+}
+
 h4#tools-link{
   padding-top: 20px !important;
 }
