--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -4,6 +4,8 @@
 
 p{
   font-size: 15px;
+  text-indent: 0.8rem;
+  padding: 0 8px;
 }
 
 h4{
@@ -26,7 +28,7 @@ h4#tools-link{
 #upper-container{
   /* background-color: rgba(128, 128, 128, 0.678); */
   padding: 20px 20px;
-  margin: 80px 20px;
+  margin: 20px 20px;
 }
 
 #pdf-container{
