added logo into navbar and rightnav

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,7 +9,7 @@ div#stock-ticker-container{
   border-radius: 8px;
   max-width: 750px;
   padding: 0 10px;
-  margin: 0 auto;
+  margin: 60px auto;
 
 }
 
