--- a/src/components/Nav/RightNav/rightNav.css
+++ b/src/components/Nav/RightNav/rightNav.css
@@ -4,13 +4,19 @@
     display: flex;
     flex-flow: row nowrap;
     flex-flow: column nowrap;
-    width: 100%;
+    width: 55%;
     height: 100%;
     position: fixed;
     top: 0;
     right: -460px;
     transition: all 0.5s ease-in-out;
     z-index: 50;
+    align-items: center;
+}
+
+#navlogo{
+    width: 30vw;
+    padding-bottom: 60px;
 }
 
 .outside {
@@ -51,11 +57,52 @@ div.right-nav.open {
     .right-nav {
         width: 100%;
     }
+
+    img#navlogo{
+        width: 8vw;
+        margin: 0 20px;
+        /* padding: 60px 20px; */
+    }
+
+    .right-nav.open, li {
+        color: white;
+        text-decoration: none;
+        font-size: 20px;
+    }
 }
 
 @media (min-width: 1024px) {
     .right-nav{
         width: 0;
-        right: -300px;
+        right: -400px;
+    }
+
+    img#navlogo{
+        width: 8vw;
+        padding-top: 90px;
+    }
+}
+
+@media(min-width: 1439px){
+    .right-nav{
+        width: 0;
+        right: -400px;
+    }
+
+    img#navlogo{
+        width: 5.5vw;
+        padding-top: 80px;
+    }
+}
+
+@media(min-width: 2559px){
+    .right-nav{
+        width: 0;
+        right: -500px;
+    }
+
+    img#navlogo{
+        width: 4vw;
+        padding-top: 80px;
     }
 }
