--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -3,74 +3,107 @@
   text-decoration: inherit;
 }
 .a, div._nav {
-    color: white;
-    width: 100vw;
-    height: 65px;
-    right: 85px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 0;
-  }
-  div._nav, a, li.links {
-    text-decoration: none !important;
-  }
+  color: white;
+  width: 100vw;
+  height: 65px;
+  right: 85px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 0;
+}
+div._nav, a, li.links {
+  text-decoration: none !important;
+}
 
-  #nav-title {
-    font-weight: 600;
-    font-size: 20px;
-    text-decoration: none !important;
-  }
+#nav-title {
+  font-weight: 600;
+  font-size: 20px;
+  text-decoration: none !important;
+}
+.menu-bar {
+  display: none;
+}
+
+div.navlogo {
+  font-size: small;
+  margin-left: 20px;
+  height: 50px;
+  width: 232px;
+  border: 2px solid black;
+  background-color: blue;
+}
+
+div.links-container li.links {
+  /* -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: black; */
+  font-size: 14px;
+  padding-top: 20px;
+}
+
+.links-container {
+  display: flex;
+  text-decoration: none !important;
+  flex-direction: column;
+  justify-content: center;
+  height: 250px;
+  margin: auto 0;
+  align-items: flex-start;
+}
+
+.links-container li {
+  text-decoration: none !important;
+  margin: 0 25px;
+  z-index: 50;
+}
+@media (min-width: 767px) {
   .menu-bar {
-    display: none;
-  }
-
-  div.navlogo {
-    font-size: small;
-    margin-left: 20px;
-    height: 50px;
-    width: 232px;
-    border: 2px solid black;
-    background-color: blue;
-  }
-
-  div.links-container li.links {
-    /* -webkit-text-stroke-width: 0.5px;
-    -webkit-text-stroke-color: black; */
-    font-size: 14px;
-    padding-top: 20px;
+    display: flex;
+    list-style: none;
+    z-index: 100;
+    width: 100%;
   }
 
   .links-container {
     display: flex;
-    text-decoration: none !important;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: center;
     justify-content: center;
-    height: 250px;
-    margin: auto 0;
-    align-items: flex-start;
+    width: 100%;
+    text-decoration: none !important;
+    padding: 0 40px;
+  }
+
+  div.links-container{
+    padding: 10px 0 0 0;
   }
   
-  .links-container li {
-    text-decoration: none !important;
-    margin: 0 25px;
-    z-index: 50;
+  div.links-container li.links{
+    font-size: 12px;
+    padding-top: 0;
   }
-  @media (min-width: 767px) {
-    .menu-bar {
-      display: flex;
-      list-style: none;
-      z-index: 100;
-      width: 100%;
-    }
+}
 
-    .links-container {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      text-decoration: none !important;
-      padding: 0 40px;
-    }
+@media(min-width: 1023px){
+  div.links-container li.links {
+    font-size: 14px;
+    padding-top: 40px;
+  }
+}
+
+@media(min-width: 1339px){
+  div.links-container li.links {
+    font-size: 20px;
+    padding-top: 30px;
+  }
+}
+
+@media(min-width: 2559px){
+  div.links-container{
+    margin-top: 30px !important;
+  }
+  div.links-container li.links {
+    font-size: 30px;
+    padding-top: 30px;
+  }
 }
