--- a/src/components/Nav/RightNav/rightNav.css
+++ b/src/components/Nav/RightNav/rightNav.css
@@ -61,7 +61,7 @@ div.right-nav.open {
     img#navlogo{
         width: 8vw;
         margin: 0 20px;
-        /* padding: 60px 20px; */
+        padding-top: 60px;
     }
 
     .right-nav.open, li {
