--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,7 +15,7 @@ div#stock-ticker-container{
 
 h1.headline{
   font-family: 'SubwayTicker';
-  color: green !important;
+  color: #C2E114!important;
   font-size: 25px !important;
   white-space: nowrap;
   /* margin-bottom: 20px; */
