--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -27,19 +27,13 @@ div.slider{
 }
 
 h4#tools-link{
-  color: rgb(0, 175, 250) !important;
+  color: rgb(17, 8, 65) !important;
   padding-top: 20px !important;
   font-weight: 500;
   list-style: none !important;
-  /* filter: brightness(120%) */
 }
 
-/* #tools-link{
-  font-weight: 600 !important;
-} */
-
 #upper-container{
-  /* background-color: rgba(128, 128, 128, 0.678); */
   padding: 20px 20px;
   margin: 20px 20px;
 }
@@ -76,7 +70,7 @@ div.mid-cont-card{
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  border: 2px solid rgba(63, 62, 62, 0.651) !important;
+  border: 2px solid rgb(17, 8, 65) !important;
   border-radius: 8px;
   margin: 10px auto;
   padding-top: 8px;
