--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -13,14 +13,20 @@ p{
   padding: 0 8px;
 }
 
+h3.home-headers{
+  font-size: 25px;
+  font-weight: 600;
+  margin: 40px 3px;
+}
+
 h4{
   transition: transform .2s;
   
 }
 
-h4:hover{
+/* h4:hover{
   transform: scale(1.3);
-}
+} */
 
 div.slider{
   position: relative;
@@ -70,7 +76,7 @@ div.mid-cont-card{
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  border: 2px solid rgb(17, 8, 65) !important;
+  border: 2px solid rgb(131, 131, 131) !important;
   border-radius: 8px;
   margin: 10px auto;
   padding-top: 8px;
@@ -107,7 +113,7 @@ p.path-text{
 
 #vendors-card{
   background-color: rgba(63, 62, 62, 0.651);
-  border: 2px solid rgba(63, 62, 62, 0.651);
+  border: 2px solid rgb(131, 131, 131);
   border-radius: 8px;
   width: 95vw;
   margin: 0 auto;
@@ -169,6 +175,7 @@ img.vendors-image{
   #mid-container{
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-around;
   }
 }
 
@@ -183,7 +190,7 @@ img.vendors-image{
 
   #mid-container{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
   }
 
   #pdf-container{
@@ -258,13 +265,14 @@ img.vendors-image{
   }
 
   #mid-container{
-    width: 75vw;
+    width: 57vw;
+    justify-content: space-around;
   }
 
   #lower-container{
     display: flex;
     flex-direction: column;
-    width: 75vw;
+    width: 55vw;
     margin: 0 auto;
     align-items: center;
     justify-content: center;
