started adding color theme from log to home page

--- a/src/components/Nav/Hamburger/hamburger.css
+++ b/src/components/Nav/Hamburger/hamburger.css
@@ -20,7 +20,7 @@ div.hamburger {
     transition: all 0.3s ease-in-out; 
     padding: 2px 0 2px 0;
     margin: 1px 0 2px 0;
-    background: white;
+    background: #C2E114;
 }
  #two {
    
@@ -32,7 +32,7 @@ div.hamburger {
     transition: all 0.3s ease-in-out; 
     padding: 2px 0 2px 0;
     margin: 2px 0 2px 0;
-    background: white;
+    background: #C2E114;
 }
  #three { 
     width: 2.5rem;
@@ -43,7 +43,7 @@ div.hamburger {
     transition: all 0.3s ease-in-out;
     padding: 2px 0 2px 0;
     margin: 2px 0 2px 0;
-    background: white;
+    background: #C2E114;
 }
 
 @media (min-width: 767px) {
