added stock think tank pdf article and section to home page

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -290,4 +290,8 @@ img.vendors-image{
   div#mid-container-card{
     justify-content: space-evenly;
   }
+
+  #lower-container{
+    width: 75vw;
+  }
 }
