--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -25,13 +25,10 @@ div._nav, a, li.links {
   display: none;
 }
 
-div.navlogo {
-  font-size: small;
-  margin-left: 20px;
-  height: 50px;
-  width: 232px;
-  border: 2px solid black;
-  background-color: blue;
+img.navlogo {
+  width: 50vw;
+  margin: 20px;
+  padding-top: 40px;
 }
 
 div.links-container li.links {
@@ -57,6 +54,10 @@ div.links-container li.links {
   z-index: 50;
 }
 @media (min-width: 767px) {
+  img.navlogo{
+    display: none;
+  }
+  
   .menu-bar {
     display: flex;
     list-style: none;
