--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,5 +1,11 @@
-h1, h6{
+h1, h5{
     color: white !important;
+}
+
+.about-headers{
+    font-size: 25px;
+    font-weight: 600;
+    margin: 70px 0 30px 0;
 }
 
 #about-container{
@@ -16,11 +22,12 @@ h1, h6{
 .about-card{
     display: flex;
     flex-direction: column;
-    border: 2px solid rgba(63, 62, 62, 0.651);
+    width: 95vw;
+    border: 2px solid rgb(131, 131, 131);
     border-radius: 10px;
     padding: 10px;
     align-items: center;
-    margin: 40px 0;
+    margin: 40px auto;
 }
 
 .headshot-card{
@@ -28,29 +35,92 @@ h1, h6{
 }
 
 img.img{
-    width: 375px !important;
+    width: 95vw !important;
     border-radius: 10px;
+    margin-top: 40px;
 }
 
 .buttons{
-    border: 2px solid rgb(2, 94, 32);
+    border: 2px solid rgb(194, 225, 20);
     width: 300px;
-    /* margin: 30px 0px 10px 0px; */
     padding: 10px;
-    border-radius: 4px;
-    color: rgb(2, 94, 32);
+    border-radius: 8px;
+    color: rgb(194, 225, 20);
     font-size: 20px;
     font-weight: 600;
-    background-color: rgb(0, 183, 255);
-    /* -webkit-text-stroke:0.5px black; */
+    background-color: transparent;
+    transition: transform .4s;
+}
+
+.buttons:hover{
+    transform: scale(1.1);
+}
+
+@media(min-width: 767px){
+    .about-headers{
+        font-size: 45px;
+    }
+
+    img.img{
+        width: 80vw !important;
+    }
+
+    .about-card{
+        width: 80vw;
+    }
+}
+
+@media(min-width: 1023px){
+    img.img{
+        width: 40vw !important;
+    }
 }
 
 @media(min-width: 1339px){
     div#lower-container{
         flex-direction: row;
+        margin-bottom: 60px !important;
+    }
+
+    img.img{
+        width: 40vw !important;
     }
 
     .about-card{
-        width: 700px;
+        height: 60vh;
+        margin: 0 10px;
+    }
+}
+
+@media(min-width: 1779px){
+    #about-main{
+        padding-top: 40px !important;
+    }
+    img.img{
+        width: 30vw !important;
+    }
+
+    .about-card{
+        height: 50vh;
+    }
+}
+
+@media(min-width: 2559px){
+    img.img{
+        width: 27vw !important;
+    }
+
+    #about-container p{
+        width: 30vw !important;
+        font-size: 18px;
+    }
+
+    .about-card{
+        width: 30vw;
+        height: 69vh;
+    }
+
+    .about-card p{
+        font-size: 18px;
     }
 }
