--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -19,20 +19,24 @@ h3.home-headers{
   margin: 40px 3px;
 }
 
-h4{
+h4#pdf-link, a{
+  list-style: none !important;
+  color: rgb(194, 225, 20) !important;
+  padding-top: 20px !important;
+  font-weight: 500;
   transition: transform .2s;
 }
 
-/* h4:hover{
+h4#pdf-link:hover{
   transform: scale(1.3);
-} */
+}
 
 div.slider{
   position: relative;
 }
 
 h4#tools-link{
-  color: rgb(17, 8, 65) !important;
+  color: rgb(194, 225, 20) !important;
   padding-top: 20px !important;
   font-weight: 500;
   list-style: none !important;
@@ -81,11 +85,12 @@ div.mid-cont-card{
   padding-top: 8px;
   width: 300px;
   height: 300px;
-  transition: transform .2s;
+  transition: transform .4s;
 }
 div.mid-cont-card:hover{
   transform: scale(1.1);
   box-shadow: 2px 2px 15px rgba(98, 98, 98, 0.329);
+  border: 2px solid rgb(194, 225, 20) !important;
 }
 
 p.path-text{
@@ -183,73 +188,77 @@ img.vendors-image{
 }
 
 @media (min-width: 1023px){
-
+  
   .image{
     height: 444px;
     width: 400px;
     border: 2px solid black;
     background-color: blue;
   }
-
+  
   #mid-container{
     display: flex;
     justify-content: space-around;
   }
-
+  
   #pdf-container{
     flex-direction: row;
     width: 950px;
     margin: 40px auto !important;
     justify-content: space-around;
+    align-items: center !important;
   }
-
+  
   div#stock-think-tank-card{
     display: flex;
     flex-direction: column;
     padding: 100px 0;
     width: 500px;
   }
-
+  
   #pdf-image{
     margin: 0 20px;
   }
-
+  
   p.stockthink-para{
     width: 500px;
   }
-
+  
   .headshot-container{
     display: flex;
     justify-content: space-evenly;
     padding-top: 30px;
   }
-
+  
   #bob-main{
     display: flex;
     flex-direction: row !important;
     /* max-width: 300px; */
   }
-
+  
   div.headshot-card , div.FaTwitter{
     display: flex;
     flex-direction: column;
   }
-
+  
   #vendors-card{
     padding: 0 !important;
   }
-
+  
   .vendors-image{
     transition: transform .2s;
   }
-
+  
   .vendors-image:hover{
     transform: scale(1.1);
   }
 }
 
-@media(min-width: 1339px){
-
+@media(min-width: 1439px){
+  h3.home-headers{
+    font-size: 55px;
+  }
+  
   div#main-banner{
     width: 1280px !important;
   }
