--- a/src/styles/tools.css
+++ b/src/styles/tools.css
@@ -1,15 +1,21 @@
+h3#tools-header{
+    font-size: 45px;
+    font-weight: 600;
+    margin: 60px 0 40px 0;
+}
+
 div#tools-container{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    /* margin: 0 auto !important; */
     overflow: hidden;
+    margin-bottom: 40px;
 }
 
 .tools-card{
     display: flex;
     flex-direction: column;
-    border: 2px solid rgba(63, 62, 62, 0.651);
+    border: 2px solid rgb(131, 131, 131);
     border-radius: 10px;
     padding: 30px;
     margin: 20px;
@@ -38,15 +44,42 @@ div#tools-container{
     padding: 40px;
 }
 
+h3.motivewave-links, h3.kinetick-links, h3.ninjatrader-links{
+    transition: transform .4s;
+}
+
+h3.motivewave-links:hover, h3.kinetick-links:hover, h3.ninjatrader-links:hover{
+    transform: scale(1.1);
+}
+
+@media(min-width: 767px){
+    h3#tools-header{
+        font-size: 55px;
+        margin-top: 80px;
+    }
+
+    h3.motivewave-links, h3.kinetick-links, h3.ninjatrader-links{
+        margin-top: 20px !important;
+    }
+}
+
+@media(min-width: 1023px){
+    .tools-card{
+        width: 60vw;
+        margin: 20px auto;
+    }
+}
 
 @media(min-width: 1339px){
     div#tools-container{
         flex-direction: row;
         justify-content: space-between;
         flex-wrap: wrap;
+        margin-bottom: 80px;
     }
     
     .tools-card{
+        width: 45vw;
         margin: 20px auto;
     }
 
@@ -62,7 +95,11 @@ div#tools-container{
     }
 }
 
-@media(min-width: 1880px){
+@media(min-width: 1779px){
+    .tools-card{
+        width: 35vw;
+    }
+
     h3.motivewave-links{
         padding-top: 130px;
     }
