--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -48,7 +48,7 @@ img.img{
     color: rgb(194, 225, 20);
     font-size: 20px;
     font-weight: 600;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.685);
     transition: transform .4s;
 }
 
