--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,18 +1,23 @@
-/* #contact-form{
-    margin: 40px auto;
-} */
+h3.contact-headers{
+    font-size: 25px;
+    font-weight: 600;
+}
+
+#contact-form{
+    margin: 120px auto;
+}
 
 #contact-card{
-    /* background-color: black; */
+    background-color: rgb(36, 35, 39);
     align-items: center;
     border: 2px solid rgba(63, 62, 62, 0.651);
     border-radius: 8px;
-    padding: 10px;
-    margin: 10px 10px 10px 10px;
+    width: 95vw;
+    margin: 0 auto !important;
+    padding: 40px 0;
 }
 
 .form-title{
-    /* display: block; */
     padding:10px 0 20px 0 !important;
     text-align: left;
     color: white;
@@ -22,26 +27,32 @@
     border: transparent;
     background-color: rgba(255, 255, 255, 0.616);
     border-radius: 8px;
-    width: 270px;
-    height: 40px;
+    width: 80vw;
+    height: 7vh;
 }
 
 #message{
-    width: 270px;
-    height: 80px;
+    width: 80vw;
+    height: 7vh;
     border-radius: 8px;
+    background-color: rgba(255, 255, 255, 0.616);
 }
 
 #form-submit{
-    border: 2px solid rgb(2, 94, 32);
+    border: 2px solid rgb(194, 225, 20);
     width: 300px;
     margin: 30px 0px 10px 0px;
     padding: 10px;
     border-radius: 8px;
-    color: rgb(2, 94, 32);
+    color: rgb(194, 225, 20);
     font-size: 20px;
     font-weight: 600;
-    background-color: rgb(0, 183, 255);
+    background-color: transparent;
+    transition: transform .4s;
+}
+
+#form-submit:hover{
+    transform: scale(1.1);
 }
 
 #contact-info{
@@ -49,11 +60,15 @@
 }
 
 @media(min-width: 767px){
+    h3.contact-headers{
+        font-size: 45px;
+    }
     #contact-form{
         width: 760px;
     }
 
     .form-title{
+        font-size: 20px;
         padding: 10px 0 10px 0;
     }
     
@@ -67,10 +82,19 @@
 }
 
 @media(min-width: 1023px){
-    .form-title{
-        padding: 10px 0 10px 80px;
+    #contact-card{
+        width: 70vw;
     }
-    #contact-form{
-        margin: 0 auto;
+}
+
+@media(min-width: 1439px){
+    #contact-card{
+        width: 60vw;
+    }
+}
+
+@media(min-width: 1879px){
+    #contact-card{
+        width: 40vw;
     }
 }
