completed styling of all pages except the media page

--- a/src/components/Nav/topnav.css
+++ b/src/components/Nav/topnav.css
@@ -41,7 +41,11 @@ a{
 
     .topnav-link{
         padding: 15px 0 0 0 !important;
+        transition: transform .4s;
+    }
 
+    .topnav-link:hover{
+        transform: scale(1.1);
     }
 }
 
