--- a/src/styles/courses.css
+++ b/src/styles/courses.css
@@ -24,6 +24,7 @@ div#shop-container{
 .shop-card{
     display: flex;
     flex-direction: column;
+    background-color: rgb(36, 35, 39);
     border: 2px solid rgb(131, 131, 131);
     border-radius: 10px;
     padding: 10px;
