--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -23,6 +23,9 @@ h1, h5{
     display: flex;
     flex-direction: column;
     width: 95vw;
+
+
+    background-color: rgb(36, 35, 39);
     border: 2px solid rgb(131, 131, 131);
     border-radius: 10px;
     padding: 10px;
@@ -48,7 +51,7 @@ img.img{
     color: rgb(194, 225, 20);
     font-size: 20px;
     font-weight: 600;
-    background-color: rgba(0, 0, 0, 0.685);
+    background-color: rgb(36, 35, 39);
     transition: transform .4s;
 }
 
