--- a/src/styles/bob.css
+++ b/src/styles/bob.css
@@ -1,18 +1,90 @@
+h1#about-bob-header{
+    font-size: 25px;
+    font-weight: 600;
+    margin: 120px 0 40px 0;
+}
+
 div#about-bob-container{
-    /* display: flex; */
-    /* flex-direction: row; */
-    padding: 0 auto !important;
+    display: flex;
+    flex-direction: column;
 }
 
-div#bob-text-area{
-    /* margin: 50px 0 0 0; */
-    padding: 100px auto !important;
-    /* width: 100% !important; */
+#bob-section-1 img, #bob-section-2 img{
+    border-radius: 8px;
+    width: 95vw;
 }
 
-img{
-    /* width: 500px;
-    height: 556px; */
-    /* display: block !important; */
-    padding: 0 auto !important;
+@media(min-width: 767px){
+    #bob-section-1 img, #bob-section-2 img{
+        width: 75vw;
+    }
+
+    h1#about-bob-header{
+        font-size: 35px;
+    }
+
+    p.bob-paragraph{
+        width: 75vw;
+        margin: 0 auto;
+    }
+}
+
+@media(min-width: 1023px){
+    #bob-section-1 img, #bob-section-2 img{
+        width: 60vw;
+    }
+}
+
+@media(min-width: 1439px){
+    h1#about-bob-header{
+        font-size: 45px;
+    }
+
+    #bob-section-1 img, #bob-section-2 img{
+        width: 40vw;
+        /* border: 2px solid red; */
+    }
+
+    div#about-bob-container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-evenly;
+        width: 100vw;
+        /* height: 100vh; */
+    }
+
+    #bob-section-1{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 80vw;
+        margin: 40px auto;
+    }
+
+    #bob-section-2{
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: space-around;
+        align-items: center;
+        width: 80vw;
+        margin: 200px 0 80px 0;
+    }
+
+    p.bob-paragraph{
+        width: 50vw;
+        padding: 0 40px;
+        font-size: 17px;
+    }
+}
+
+@media(min-width: 1879px){
+    p.bob-paragraph{
+        padding: 0 180px;
+    }
+
+    #bob-section-1 img, #bob-section-2 img{
+        width: 35vw;
+    }
 }
