--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -33,21 +33,21 @@ h3.contact-headers{
 
 #message{
     width: 80vw;
-    height: 7vh;
+    height: 20vh;
     border-radius: 8px;
     background-color: rgba(255, 255, 255, 0.616);
 }
 
 #form-submit{
     border: 2px solid rgb(194, 225, 20);
-    width: 300px;
+    width: 80vw;
     margin: 30px 0px 10px 0px;
     padding: 10px;
     border-radius: 8px;
     color: rgb(194, 225, 20);
     font-size: 20px;
     font-weight: 600;
-    background-color: transparent;
+    background-color: rgb(36, 35, 39);
     transition: transform .4s;
 }
 
@@ -64,7 +64,7 @@ h3.contact-headers{
         font-size: 45px;
     }
     #contact-form{
-        width: 760px;
+        width: 95vw;
     }
 
     .form-title{
@@ -73,11 +73,11 @@ h3.contact-headers{
     }
     
     .form-input{
-        width: 450px;  
+        width: 80vw;  
     }
 
     #message{
-        width: 450px;
+        width: 80vw;
     }
 }
 
@@ -85,16 +85,53 @@ h3.contact-headers{
     #contact-card{
         width: 70vw;
     }
+
+    .form-input{
+        width: 60vw;  
+    }
+
+    #message{
+        width: 60vw;
+    }
+
+    #form-submit{
+        width: 30vw;
+    }
 }
 
 @media(min-width: 1439px){
     #contact-card{
         width: 60vw;
     }
+
+    .form-input{
+        width: 40vw;  
+    }
+
+    #message{
+        width: 40vw;
+    }
+
+    #form-submit{
+        width: 20vw;
+    }
 }
 
 @media(min-width: 1879px){
     #contact-card{
-        width: 40vw;
+        max-width: 786px;
+    }
+    
+    .form-input{
+        max-width: 592px;  
+        max-height: 60px;
+    }
+
+    #message{
+        max-width: 592px;
+    }
+
+    #form-submit{
+        max-width: 296px;
     }
 }
