--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -53,7 +53,7 @@ h4#tools-link{
   margin: 40px auto !important;
 }
 
-#pdf-image{
+#pdf{
   width: 360px;
   height: 466px;
   justify-content: space-evenly;
@@ -146,10 +146,6 @@ img.vendors-image{
   
   p.path-text{
     width: 275px;
-    /* height: 250px; */
-    /* padding-top: 15px; */
-    /* margin: 10px; */
-    /* text-align: left; */
   }
 
   h3.home-headers{
@@ -158,7 +154,6 @@ img.vendors-image{
 
   .carousel-image{
     border-radius: 10px !important;
-
   }
   
   div.slider{
@@ -206,7 +201,7 @@ img.vendors-image{
     width: 50vw;
   }
   
-  #pdf-image{
+  #pdf{
     margin: 0 20px;
   }
   
@@ -257,7 +252,7 @@ img.vendors-image{
     width: 1280px;
   }
 
-  #pdf-image{
+  #pdf{
     width: 500px !important;
     height: 647px !important;
   }
