changed font color of ul on tools page to white

--- a/src/styles/tools.css
+++ b/src/styles/tools.css
@@ -27,6 +27,7 @@ div#tools-container{
 #tools-ul li{
     font-size: 14px !important;
     text-align: left;
+    color: white;
 }
 
 #motivewave-logo{
